--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 	<head>
 		<script type="text/javascript">
-			console.log("Engifest'17");
+			console.log("%cEngifest'17", "background: white; color: black; font-size: x-large");
+			console.log("%c -Developed at Home Labs", "background: white; color: black; font-size: large");
+			console.log("  -Developed using Three.js");
+			console.log("%c>> Developers", "background: white; color: black; font-size: small");
+			console.log("%c----> BHASKAR GOYAL", "background: white; color: black; font-size: small");
+			console.log("%c----> AVIJEET GUPTA", "background: white; color: black; font-size: small");
+			console.log("%c----> ADITYA VERMA", "background: white; color: black; font-size: small");
 			var maxWidth = 700;
 			var maxHeight = 660;
 			var mobileURL = "http://engifest17.github.io/MobileWebsite";
@@ -10,9 +16,9 @@
 			}
 		</script>
 		<!-- No cache need to be changed -->
-		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+		<!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="Pragma" content="no-cache" />
-		<meta http-equiv="Expires" content="0" />
+		<meta http-equiv="Expires" content="0" /> -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta itemprop="name" content="Engifest &middot; Endless Energetic Enigmatic">
         <meta itemprop="description" content="Engifest 2017">
@@ -421,9 +427,9 @@
 		    </div>
 		    <div class="modal-body modal-footer">
 		      <div class="row">
-                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+                        <!-- <div class="sponsor-type"><center>Title Sponsor</center></div>
                         <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
-                        </div>
+                        </div> -->
                 </div>
 		    </div>
 		    <!-- <div class="modal-footer">
@@ -3872,7 +3878,7 @@
 
 												1. Only college students are allowed.<br>
 
-												2. Last date of online registration is xyz. On the spot registrations will not be
+												2. Last date of online registration is 10th February. On the spot registrations will not be
 
 												entertained.<br>
 
@@ -5255,18 +5261,20 @@
 			                    	<ul class="nav nav-tabs">
 						                <li class="active"><a data-toggle="tab" href="#informalpn">Poker</a></li>
 						                <li><a data-toggle="tab" href="#informalfc">Fun City</a></li>
-						                <li><a data-toggle="tab" href="#informalpr">Prom Night</a></li>
-						                <li><a data-toggle="tab" href="#informalcm">Cultural Midnight</a></li>
-						                <li><a data-toggle="tab" href="#informalop">Photography</a></li>
+						                <li><a data-toggle="tab" href="#informalstand">StandUp Comedy</a></li>
+						                <li><a data-toggle="tab" href="#informalsn">Sufi Night</a></li>
+						                <!-- <li><a data-toggle="tab" href="#informalop">Photography</a></li> -->
 						            </ul>
 
 						            <div class="tab-content">
 						                <div id="informalpn" class="tab-pane fade in active">
 						                    <div class="info-content">
 						                        <div class="info-row">
-						                        One table, a deck of cards & a game of poker.
+						                        Pokerbaazi.com presents Poker Tournament with prizes more than Rs. 50,000.<br>
+						                        One table, a deck of cards and a game of poker.
 												Enticing already, isn't it?<br>
-												Well, Engifest’17 presents to you POKER, a contest replete with vigor and the will to win; where you test your wit and LUCK. So use your poker face, and raise the stakes with your stellar flair!
+												Well, Engifest’17 presents to you POKER, a contest replete with vigor and the will to win; where you test your wit and LUCK. So use your poker face, and raise the stakes with your stellar flair!<br>
+												Stay tuned for more.
 
 						                        </div>
 						                        <!-- <div class="info-row">
@@ -5281,8 +5289,8 @@
 						                <div id="informalfc" class="tab-pane fade">
 						                    <div class="info-content">
 						                        <div class="info-row">
-						                            This Year Engifest brings to you the most dynamic department of informal events, The Fun City. Escape from the monotony of everyday, and bask in the revelry with Fun City! From wacky adventurous events to the downright crazy fun on the streets all under one roof. With paintball, pool, air hockey, laser tag and what not; Fun City shall propel your excitement to a new level altogether! Not for the weak-hearted, it is a gala of madness and exuberance that shall leave you yearning for more!
-
+						                            This Year Engifest brings to you the most dynamic department of informal events, The Fun City. Escape from the monotony of everyday, and bask in the revelry with Fun City! From wacky adventurous events to the downright crazy fun on the streets all under one roof. With paintball, pool, air hockey, laser tag and what not; Fun City shall propel your excitement to a new level altogether! Not for the weak-hearted, it is a gala of madness and exuberance that shall leave you yearning for more!<br>
+						                            Stay tuned for more.
 
 						                        </div>
 						                        <!-- <div class="info-row">
@@ -5294,10 +5302,10 @@
 						                        </div> -->
 						                    </div>
 						                </div>
-						                <div id="informalpr" class="tab-pane fade">
+						                <div id="informalstand" class="tab-pane fade">
 						                    <div class="info-content">
 						                        <div class="info-row">
-						                            "I never liked that song until I danced to it with you". They say that all nights must eventually end and there are no shortcuts to happiness. What 'they' say goes straight out of the window when you are talking about prom night. This Engifest, we yet again celebrate love. So go on, ask your crush out, and celebrate this Valentine’s with someone special! An event only for couples, Prom Night shall be a star-spangled, romantic affair you do not want to miss!
+						                            Stay tuned for more.
 
 
 						                        </div>
@@ -5310,18 +5318,10 @@
 						                        </div> -->
 						                    </div>
 						                </div>
-						                <div id="informalcm" class="tab-pane fade">
+						                <div id="informalsn" class="tab-pane fade">
 						                    <div class="info-content">
 						                        <div class="info-row">
-						                            Excitement in the air <br>
-													With a hush of expectation <br>
-													Darkness waiting for light <br>
-													The fire is lit exploding into flames. <br>
-													Come, enjoy and share your excitement, nervousness and enthusiasm for our cultural fest. <br>
-													Get relieved of all the stress. <br>
-													Eat, sing and dance as much as you can! <br>
-													Make the boring nights of hostels full of memories. <br>
-													It’s Bon Fire time. So ditch your dates or bring them along for these memorable nights. 
+						                            Stay tuned for more.
 
 
 						                        </div>
@@ -5334,7 +5334,7 @@
 						                        </div> -->
 						                    </div>
 						                </div>
-						                <div id="informalop" class="tab-pane fade">
+						                <!-- <div id="informalop" class="tab-pane fade">
 						                    <div class="info-content">
 						                        <div class="info-row">
 						                            The enormous variation in the perspective of the same thing is what makes each of us so unique. This Engifest, amaze us with yours. Explore the photographer in you, and click a picture on the given theme. Share with the world, life as seen from your eyes.
@@ -5347,7 +5347,7 @@
 						                            
 						                        </div>
 						                    </div>
-						                </div>
+						                </div> -->
 
 						            </div>
 						        </div>
