--- a/team.html
+++ b/team.html
@@ -50,8 +50,8 @@
                 <div class="designation">Cultural Advisor, Cultural Council</div>
             </div>
             <div class="flex-item">
-                <div class="contact-image"><img class ="img" src="assets/team/Snehal Toppo.jpg"></div> 
-                <div class="name">Snehal Toppo</div>
+                <div class="contact-image"><img class ="img" src="assets/team/Anmol Anand.jpg"></div> 
+                <div class="name">Anmol Anand</div>
                 <div class="designation">Students' Advisor, Students' Association</div>
             </div>
             
@@ -172,6 +172,36 @@
                     <div class="designation">Fest Coordinator</div>
                 </div>
             </div>              
+        </div>
+
+        <!-- Executive Core -->
+        <br><br>
+        <div class="row">
+            <div class="flex-header">
+                <center> Executive Core </center>
+            </div>
+            <div class="row flex-container">
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Snehal Toppo.jpg"></div> 
+                    <div class="name">Snehal Toppo</div>
+                    <div class="designation">Head</div>
+                </div>
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Aseem Bansal.jpg"></div> 
+                    <div class="name">Aseem Bansal</div>
+                    <div class="designation">Head</div>
+                </div>
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Nithin Vythla.jpg"></div> 
+                    <div class="name">Nithin Vythla</div>
+                    <div class="designation">Head</div>
+                </div>
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Aditi Maheshwari.jpg"></div> 
+                    <div class="name">Aditi Maheshwari</div>
+                    <div class="designation">Head</div>
+                </div>
+            </div>            
         </div>
 
         <!-- Digital Marketing - Content - Corporate - Public Relation -->
@@ -425,10 +455,10 @@
             </div>
         </div>        
 
-        <!-- Designing - App -->
+        <!-- Designing - Content -->
         <br><br>
         <div class="row">
-            <div class="col-xs-5">
+            <div class="col-xs-8">
                 <div class="flex-header">
                     <center> Designing Team </center>
                 </div>
@@ -464,31 +494,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-2">
-                <div class="flex-header">
-                    <center> Security</center>
-                </div>
-                <div class="row flex-container">
-                    <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Abhinav Kumar.jpg"></div> 
-                        <div class="name">Abhinav Kumar</div>
-                        <div class="designation">Head</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <div class="flex-header">
-                    <center> Mobile App</center>
-                </div>
-                <div class="row flex-container">
-                    <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Krishna Rai.jpg"></div> 
-                        <div class="name">Krishna Rai</div>
-                        <div class="designation">Head</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-3">
+            <div class="col-xs-4">
                 <div class="flex-header">
                     <center> Content Team</center>
                 </div>
@@ -501,6 +507,63 @@
                     <div class="flex-item">
                         <div class="contact-image"><img class ="img" src="assets/team/Shivani Jerngal.jpg"></div> 
                         <div class="name">Shivani Jerngal</div>
+                        <div class="designation">Head</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Foodcity Coordinator - Security - Mobile -->
+        <br><br>
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="flex-header">
+                    <center> Foodcity Coordinators </center>
+                </div>
+                <div class="row flex-container">
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Jatin Dhiman.jpg"></div> 
+                        <div class="name">Jatin Dhiman</div>
+                        <div class="designation">Head</div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Yassar Ali.jpg"></div> 
+                        <div class="name">Yassar Ali</div>
+                        <div class="designation">Head</div>
+                        <br>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <div class="flex-header">
+                    <center> Security</center>
+                </div>
+                <div class="row flex-container">
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Abhinav Kumar.jpg"></div> 
+                        <div class="name">Abhinav Kumar</div>
+                        <div class="designation">Head</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="flex-header">
+                    <center> Mobile App</center>
+                </div>
+                <div class="row flex-container">
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Krishna Rai.jpg"></div> 
+                        <div class="name">Krishna Rai</div>
+                        <div class="designation">Head</div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Ashish Kumar.jpg"></div> 
+                        <div class="name">Ashish Kumar</div>
+                        <div class="designation">Head</div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Mohit Kumar.jpg"></div> 
+                        <div class="name">Mohit Kumar</div>
                         <div class="designation">Head</div>
                     </div>
                 </div>
