bas karo akriti :p

--- a/team.html
+++ b/team.html
@@ -146,6 +146,11 @@
                     <div class="designation">Fest Coordinator</div>
                 </div>
                 <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Anand Prakash.jpg"></div> 
+                    <div class="name">Anand Prakash</div>
+                    <div class="designation">Fest Coordinator</div>
+                </div>
+                <div class="flex-item">
                     <div class="contact-image"><img class ="img" src="assets/team/Jyothi Menon.jpg"></div> 
                     <div class="name">Jyothi Menon</div>
                     <div class="designation">Fest Coordinator</div>
@@ -194,6 +199,11 @@
                 <div class="flex-item">
                     <div class="contact-image"><img class ="img" src="assets/team/Nithin Vythla.jpg"></div> 
                     <div class="name">Nithin Vythla</div>
+                    <div class="designation">Head</div>
+                </div>
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Nishant Aneja.jpg"></div> 
+                    <div class="name">Nishant Aneja</div>
                     <div class="designation">Head</div>
                 </div>
                 <div class="flex-item">
