Path to Infinity added

--- a/index.html
+++ b/index.html
@@ -3242,7 +3242,8 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li class="active"><a data-toggle="tab" href="#shakedown" class="event-list float-nav">Shakedown</a></li>
+	                    		<li class="active"><a data-toggle="tab" href="#path-to-infinity" class="event-list float-nav">The Path to Infinity</a></li>
+	                            <li><a data-toggle="tab" href="#shakedown" class="event-list float-nav">Shakedown</a></li>
 	                            <li><a data-toggle="tab" href="#kaleidoscope" class="event-list float-nav">Kaleidoscope</a></li>
 	                            <li><a data-toggle="tab" href="#arte-fotographia" class="event-list float-nav">Arte Fotographia</a></li>
 	                            <li><a data-toggle="tab" href="#kavi-sammelan" class="event-list float-nav">Kavi Sammelan</a></li>                            
@@ -3250,8 +3251,56 @@
 	                    </div>
 	                    <div class="col-xs-9">
 	                    	<div class= "tab-content">
+
+	                    		<!-- The Path to Infinity -->
+		                    	<div id="path-to-infinity" class="tab-pane fade in active">
+			                    	<ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#path-to-infinityhome">Info</a></li>
+						                <li><a data-toggle="tab" href="#path-to-infinitymenu1">Rules</a></li>
+						                <li><a data-toggle="tab" href="#path-to-infinitymenu2">Contact</a></li>
+						                <a href="https://goo.gl/forms/ujkqjz3avmXxywJW2" target="_blank" class="register"><button class="btn pull-right" >Register</button></a>
+						            </ul>
+			                    	<div class="tab-content">
+						                <div id="path-to-infinityhome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">
+						                        Engifest Infinity presents to you - your Path to Infinity! <br>Infinite Happiness, Infinite Fun and Infinite Prizes(read : money). The biggest FILM MAKING event of the town! 
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>17 Feb - 20 Feb<br>
+						                            <b>Time: </b>All Day<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						                <div id="path-to-infinitymenu1" class="tab-pane fade">
+						                    <div class="rule-content">
+						                        Here's the deal :
+												<br>- Visit us or Reside with us from 17th-20th February 2017.
+												<br>- Record the making, the setting up, the team work, the events, the pro-nites- anything and everything
+												<br>- Make a short film on Engifest. You will be given 2 weeks post 20th February to edit, process and make the short film.
+												<br>- Duration : 3-6 minutes
+												<br>- Team Size - Maximum 5(No Lower Limit.)
+												<br>What's in it for you?
+												<br>- Cash prizes worth Rs1,00,000 (yes, 5 zeroes)
+												<br>- An all access pass for all the events
+												<br>- A chance for your movie to feature on the OFFICIAL website of DTU.
+												<br>- Top 3 entries will be featured on the official channel of DTU - DTU STUDIO.
+												<br>- A chance to meet the EDM king of India - DJ Nucleya!
+												<br>
+												<br>Note : You are required to give us the raw footage. Option for accomodation is available. No participation fees.
+						                    </div>
+						                </div>
+						                <div id="path-to-infinitymenu2" class="tab-pane fade">
+						                    <div class="contact-content">
+						                        Ayush Goel - 9999888200<br>
+						                    </div>
+						                </div>
+						            </div>
+					            </div>
+
 		                    	<!-- Shakedown -->
-		                    	<div id="shakedown" class="tab-pane fade in active">
+		                    	<div id="shakedown" class="tab-pane fade">
 			                    	<ul class="nav nav-tabs">
 						                <li class="active"><a data-toggle="tab" href="#shakedownhome">Info</a></li>
 						                <li><a data-toggle="tab" href="#shakedownmenu1">Contact</a></li>
