Updated team, Changes Contact us

--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
 	                        <div class="contact">+91-9811353121</div>
 	                    </div>
 	                    <div class = "col-xs-3 col-xs-offset-2"> 
-	                    	<div class="name">Abhishek Bishnoi</div>
+	                    	<div class="name">Vipin Khandelwal</div>
 	                        <div class="designation">Head, Hospitality</div>
-	                        <div class="contact">+91-8562065555</div>
+	                        <div class="contact">+91-9971719969</div>
 	                    </div>
                 </div>
 
