--- a/team.html
+++ b/team.html
@@ -114,7 +114,41 @@
                     <div class="name">Divyendu Thakur</div>
                     <div class="designation">Joint Secretary</div>
                 </div>
-            </div>  
+            </div> 
+            <!-- Executive Core -->
+        <br><br>
+        <div class="row">
+            <div class="flex-header">
+                <center> Executive Core </center>
+            </div>
+            <div class="row flex-container">
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Snehal Toppo.jpg"></div> 
+                    <div class="name">Snehal Toppo</div>
+                    <!-- <div class="designation">Head</div> -->
+                </div>
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Aseem Bansal.jpg"></div> 
+                    <div class="name">Aseem Bansal</div>
+                    <!-- <div class="designation">Head</div> -->
+                </div>
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Nithin Vythla.jpg"></div> 
+                    <div class="name">Nithin Vythla</div>
+                    <!-- <div class="designation">Head</div> -->
+                </div>
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Nishant Aneja.jpg"></div> 
+                    <div class="name">Nishant Aneja</div>
+                    <!-- <div class="designation">Head</div> -->
+                </div>
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Aditi Maheshwari.jpg"></div> 
+                    <div class="name">Aditi Maheshwari</div>
+                    <!-- <div class="designation">Head</div> -->
+                </div>
+            </div>            
+        </div> 
             <br>
             <div class="row flex-container">
                 <div class="flex-item">
@@ -179,40 +213,7 @@
             </div>              
         </div>
 
-        <!-- Executive Core -->
-        <br><br>
-        <div class="row">
-            <div class="flex-header">
-                <center> Executive Core </center>
-            </div>
-            <div class="row flex-container">
-                <div class="flex-item">
-                    <div class="contact-image"><img class ="img" src="assets/team/Snehal Toppo.jpg"></div> 
-                    <div class="name">Snehal Toppo</div>
-                    <div class="designation">Head</div>
-                </div>
-                <div class="flex-item">
-                    <div class="contact-image"><img class ="img" src="assets/team/Aseem Bansal.jpg"></div> 
-                    <div class="name">Aseem Bansal</div>
-                    <div class="designation">Head</div>
-                </div>
-                <div class="flex-item">
-                    <div class="contact-image"><img class ="img" src="assets/team/Nithin Vythla.jpg"></div> 
-                    <div class="name">Nithin Vythla</div>
-                    <div class="designation">Head</div>
-                </div>
-                <div class="flex-item">
-                    <div class="contact-image"><img class ="img" src="assets/team/Nishant Aneja.jpg"></div> 
-                    <div class="name">Nishant Aneja</div>
-                    <div class="designation">Head</div>
-                </div>
-                <div class="flex-item">
-                    <div class="contact-image"><img class ="img" src="assets/team/Aditi Maheshwari.jpg"></div> 
-                    <div class="name">Aditi Maheshwari</div>
-                    <div class="designation">Head</div>
-                </div>
-            </div>            
-        </div>
+        
 
         <!-- Digital Marketing - Content - Corporate - Public Relation -->
         <br><br>
