--- a/team.html
+++ b/team.html
@@ -210,6 +210,11 @@
                     <div class="name">Yash Chauhan</div>
                     <div class="designation">Fest Coordinator</div>
                 </div>
+                <div class="flex-item">
+                    <div class="contact-image"><img class ="img" src="assets/team/Vaibhav Dadheech.jpeg"></div> 
+                    <div class="name">Vaibhav Dadheech</div>
+                    <div class="designation">Fest Coordinator</div>
+                </div>
             </div>              
         </div>
 
