--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 			if(screen.width < maxWidth || screen.height < maxHeight || screen.height > screen.width ) {
 				document.location = mobileURL;
 			}
+
+
+
+			if(!window.WebGLRenderingContext){
+				document.location = mobileURL;
+				console.log("WebGL not supported");
+			}else{
+				console.log("WenGL supported");
+			}
 		</script>
 		<!-- No cache need to be changed -->
 		<!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
