--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				document.location = mobileURL;
 				console.log("WebGL not supported");
 			}else{
-				console.log("WenGL supported");
+				// console.log("WebGL supported");
 			}
 		</script>
 		<!-- No cache need to be changed -->
