br added for foodcity coordinator

--- a/team.html
+++ b/team.html
@@ -543,7 +543,8 @@
                         <div class="designation">Head</div>
                     </div>
                     <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Yassar Ali.jpg"></div> 
+                        <div class="contact-image">
+                            <br><img class ="img" src="assets/team/Yassar Ali.jpg"></div> 
                         <div class="name">Yassar Ali</div>
                         <div class="designation">Head</div>
                         <br>
