--- a/team.html
+++ b/team.html
@@ -243,7 +243,7 @@
                     </div>
                     <div class="flex-item">
                         <div class="contact-image"><img class ="img" src="assets/team/Vatsala Singh.jpg"></div> 
-                        <div class="name">Vatsala Singh</div>
+                        <div class="name">Vatsala Singh Rajput</div>
                         <div class="designation">Head</div>
                     </div>
                 </div>
