new console logs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<script type="text/javascript">
 			console.log("%cEngifest'17", "background: white; color: black; font-size: x-large");
-			console.log("  -Developed using Three.js");
+			console.log("  -Developed using Three.js, a WebGL library.");
 			console.log("%c>> Developers", "background: white; color: black; font-size: small");
 			console.log("%c----> BHASKAR GOYAL", "background: white; color: black; font-size: small");
 			console.log("%c----> AVIJEET GUPTA", "background: white; color: black; font-size: small");
