--- a/index.html
+++ b/index.html
@@ -4813,7 +4813,7 @@
 						            </ul>
 
 						            <div class="tab-content">
-						                <div id="nukkadhome" class="tab-pane fade in active">
+						                <div id="nukkadhome" class="tab-pane fade">
 						                    <div class="info-content">
 						                        <div class="info-row">Nukkad, the street event, brings out the issues and afflictions that ravage our nation at every moment, each day, and attempts to bring a change in the situations of the afflicted.
 						                        </div>
