--- a/index.html
+++ b/index.html
@@ -4813,7 +4813,7 @@
 						            </ul>
 
 						            <div class="tab-content">
-						                <div id="nukkadhome" class="tab-pane fade">
+						                <div id="nukkadhome" class="tab-pane fade in active">
 						                    <div class="info-content">
 						                        <div class="info-row">Nukkad, the street event, brings out the issues and afflictions that ravage our nation at every moment, each day, and attempts to bring a change in the situations of the afflicted.
 						                        </div>
@@ -4921,7 +4921,7 @@
 					            <div id="natya" class="tab-pane fade">
 						            <ul class="nav nav-tabs">
 						                <li class="active"><a data-toggle="tab" href="#natyahome">Info</a></li>
-						                <li class="active"><a data-toggle="tab" href="#natyamenu1">Rules</a></li>
+						                <li><a data-toggle="tab" href="#natyamenu1">Rules</a></li>
 						                <li><a data-toggle="tab" href="#natyamenu2">Contact</a></li>
 						                <a href="https://goo.gl/forms/as6xlcC5uSjpCGg33" target="_blank" class="register"><button class="btn pull-right" >Register</button></a>
 						            </ul>
