--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
 		      <div class="row">
 		      	<div class="info-content marginLeft">
 						<div class="info-row">
-	                        Follow these simple steps : <br>
-							1. Open the link, click on register and fill all the details.<br>
+	                        Steps : <br>
+							1. Click on "Register" and fill all the details.<br>
 							2. Enter Promo Code : ENGIFEST<br>
 							3. Enter OTP and register.<br>
-							4. Activate your account through email(usually found in Promotions/Spam).<br><br>
+							4. Activate your account through email (usually found in Promotions/Spam).<br><br>
 							<center><a class= "myButton no-decoration" href="http://www.pokerbaazi.com/pbuser?campaigncode=ENGIFEST" target="_blank">Register</a></center> <br>
 							<b>Note : </b>Unique Verification Email from Pokerbaazi.com will act as passes to the concert and provide entry into the campus! Registrations only through this link will be considered.
 						</div>
