--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			console.log("%c----> ADITYA VERMA", "background: white; color: black; font-size: small");
 			var maxWidth = 700;
 			var maxHeight = 660;
-			var mobileURL = window.location.hostname+"/MobileWebsite";
+			var mobileURL = "MobileWebsite";
 			if(screen.width < maxWidth || screen.height < maxHeight || screen.height > screen.width ) {
 				document.location = mobileURL;
 			}
