Kushagra Samarth contact added

--- a/MobileWebsite/event/fashion/fof.html
+++ b/MobileWebsite/event/fashion/fof.html
@@ -94,7 +94,8 @@
                             <p id="event-desc" class="left">
                                 <br><br>Contact : <br> Mehul (PR Cordinator) - 9599436329<br>
                                 Kumar Sourabh - 9031769519<br>
-                                Snober Nisar - 9717832128
+                                Snober Nisar - 9717832128<br>
+                                Kushagra Samarth - 999926988
 
                                 <!-- <br><br><br>Date: 15th Feb
                                 <br>Time: 10:00 am
