--- a/MobileWebsite/event/fashion/paridhan.html
+++ b/MobileWebsite/event/fashion/paridhan.html
@@ -109,7 +109,8 @@
                             <p id="event-desc" class="left">
                                 <br><br>Contact : <br> Mehul (PR Cordinator) - 9599436329<br>
                                 Sushant Kharthol - 9582867935<br>
-                                Shakuntala - 8826826948
+                                Shakuntala - 8826826948<br>
+                                Kushagra Samarth - 999926988
 
                                 <br><br><br>Date: 19 Feb
                                 <br>Time: 4:00 pm
