--- a/index.html
+++ b/index.html
@@ -3465,7 +3465,7 @@
 						                        	"Too many people in the modern world view poetry as a luxury, not a necessity like petrol. But to me it's the oil of life."<br>
 
 													Engifest Infinity presents Kavi Sammelan, an evening of wonder and beauty, enhanced by the magic that can only be created by the trappings of emotions within words.
-													The event holds precedent in the form of a memorable evening during Engifest 2017, where renowned poet Kumar Vishwas turned out to charm the enormous crowds with his witticisms.
+													The event holds precedent in the form of a memorable evening during Engifest 2016, where renowned poet Kumar Vishwas turned out to charm the enormous crowds with his witticisms.
 													The event was well attended, with all the faculty members of DTU and hundreds of students in attendance to watch the man speak.
 													This year too, the promises of sweet sorrows and magical moments are abound.
 													
@@ -5179,6 +5179,7 @@
 						                        Mehul (PR Representative) - 9599436329<br>
 						                        Sushant Kharthol - 9582867935  <br>
 						                        Shakuntala - 8826826948<br>
+						                        Kushagra Samarth - 999926988<br>
 						                    </div>
 						                </div>
 						            </div>
@@ -5249,6 +5250,7 @@
 						                        Mehul (PR Representative) - 9599436329<br>
 						                        Kumar Sourabh - 9031769519 <br>
 						                        Snober Nisar - 9717832128 <br>
+						                        Kushagra Samarth - 999926988<br>
 						                    </div>
 						                </div>
 						            </div>
