--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 	        </div>
         </div>
 
-        <!-- Accomodation Div -->
+        <!-- Accommodation Div -->
 		<div id="accomodationDiv" class="float-acc lowermenusound" >
-			<a class="no-decoration" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accomodation
+			<a class="no-decoration" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodation
 			</a>
 		</div>
 		
