--- a/MobileWebsite/event/literary/kavyajana.html
+++ b/MobileWebsite/event/literary/kavyajana.html
@@ -59,7 +59,7 @@
                 <li><a href="../../index.html" class="active">HOME</a></li>
                 <li><a href="../../register.html">Registration</a></li>
                 <li><a href="../../events.html">Events</a></li>
-                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accomodations</a></li>
+                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodations</a></li>
                 <!-- <li><a href="#">Sponsors</a></li> -->
                 <li><a href="../../contact.html">Contact Us</a></li>
                 <!-- <li><a href="#">LINK SEVEN</a></li> -->
