italics web dev team

--- a/team.html
+++ b/team.html
@@ -440,7 +440,7 @@
             </div>
             <div class="col-xs-4">
                 <div class="flex-header">
-                    <center> Web Development Team </center>
+                    <center><i> Web Development Team </i></center>
                 </div>
                 <div class="row flex-container">
                     <div class="flex-item">
