Registration updated in mobile website

--- a/MobileWebsite/register.html
+++ b/MobileWebsite/register.html
@@ -73,10 +73,10 @@
 
                 <div class="row">
                     <div class="col-lg-4 col-lg-offset-4">
-                    	<h4 class="list-heading"> Follow These Steps </h4>
+                    	<h4 class="list-heading"> Steps: </h4>
                         <ol class="event-list-order" type="A">
                             <li> 
-                                Open the link, click on register and fill all the details.
+                                Click on "Register" and fill all the details.
                             </li>
                             <li> 
                                 Enter Promo Code : ENGIFEST
@@ -85,11 +85,11 @@
                                 Enter OTP and register.
                             </li>
                             <li> 
-                                Activate your account through email(usually found in Promotions/Spam).
+                                Activate your account through email (usually found in Promotions/Spam).
                             </li>
                         </ol>
                     	<center> 
-                    		<b><a class="click-here myButton" href="http://www.pokerbaazi.com/pbuser?campaigncode=ENGIFEST"> Click Here to Register </a></b>
+                    		<b><a class="click-here myButton" href="http://www.pokerbaazi.com/pbuser?campaigncode=ENGIFEST"> Register </a></b>
                     	</center>
                         <p id="event-desc" class="justify">
                         	Note : Unique Verification Email from Pokerbaazi.com will act as passes to the concert and provide entry into the campus! Registrations only through this link will be considered.
