Art Events added

--- a/MobileWebsite/events.html
+++ b/MobileWebsite/events.html
@@ -83,6 +83,9 @@
                                 <li> 
                                     <a href="event/music.html">Music</a>
                                 </li>
+                                <li>
+                                    <a href="event/art.html">Art</a>
+                                </li>
                                 <li> 
                                     <a href="event/dance.html">Dance</a>
                                 </li>
