--- a/index.html
+++ b/index.html
@@ -3903,7 +3903,7 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li class="active"><a data-toggle="tab" href="#shoe-painting" class="event-list float-nav">Show Painting</a></li>
+	                            <li class="active"><a data-toggle="tab" href="#shoe-painting" class="event-list float-nav">Shoe Painting</a></li>
 	                            <li><a data-toggle="tab" href="#art-and-furoius" class="event-list float-nav">Art &amp; Furious</a></li>
 	                            <li><a data-toggle="tab" href="#3-d-art" class="event-list float-nav">3 Dimensional Art</a></li>                           
 	                        </ul>
